# echomind

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  Makefile.backup_20251125_214539  Makefile.optimization-summary.md  Makefile.optimized  README.en.md  README.md  README.zh.md  VECTOR_DIMENSION_SOLUTION_SUMMARY.md  prd.md  product-roadmap.md  tech-architecture.md
.agent/workflows/: release.md
.github/workflows/: ci-cd.yml  ci.yml
.qoder/quests/: ai-native-architecture-refactor.md
backend/: .dockerignore  Dockerfile  go.mod  go.sum  package.json  pnpm-lock.yaml
backend/cmd/: main.go
backend/configs/: README.md  app_config.go  config.example.yaml  logger.example.yaml  logger.yaml  validate_config.sh
backend/migrations/: 001_update_vector_dimensions.sql  (+4 more)
deploy/: deploy.sh  docker-compose.prod.yml  docker-compose.yml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
docs/: README.md  api.md  api_search_sequence_diagram.md  architecture.md  cache-service-otel-integration.md  design-v2.0.md  design-v2.1.md  integration-test-plan-phase3.md  openapi.yaml  performance_benchmarks.md  prd.md  product-design.md  product-roadmap.md  tech-architecture.md
frontend/: Dockerfile  README.md  jest.config.js  jest.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
scripts/: CI_ENHANCED_README.md  CI_README.md  I18N_README.md  check_ci.sh  check_ci_enhanced.sh  check_i18n.js  ci.sh  clear_inbox.sh  delete_all_emails.sh  dev.sh
(+420 files in other folders)
