[package]
name = "echomind-desktop"
version = "1.2.0"
description = "EchoMind Desktop Application"
authors = ["EchoMind Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
